# Wordcount

./: CMakeLists.txt  main.cpp  parser.cpp  parser.hpp
